--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <header>
-        <div class="headertop">
+        <div class="headertop" id="myHeader">
             <div class="container">
                 <div class="headerContainer">
                     <div class="mobile-nav">
@@ -32,7 +32,7 @@
                         <a href="./index.html"><img src="./images/logo.png" alt="logo"></a>
                     </div>
                     <div class="site-nav-menu">
-                        <div class="primary-menu container">
+                        <div class="primary-menu">
                             <div class="header-search">
                                 <form action="/action_page.php" target="_blank" method="get">
                                     <input type="text" placeholder="Search entire store here" name="search">
@@ -443,6 +443,44 @@
                 <div class="productcard tabcontent" id="new_arrivals">
                     <div class="carditems">
                         <div class="card">
+                            <div class="cardimage5">
+                                <img src="./images/product-card/product5.jpg" alt="Denim Jeans">
+                                <div class="cardhover">
+                                    <img src="./images/zoombutton.png" alt="zoombutton">
+                                    <button type="button" class="cardbutton"
+                                        onclick="alert('Your Product has been Successfully Added to Cart')">Add to
+                                        Cart</button>
+                                </div>
+                            </div>
+                            <div class="cardDescription">
+                                <div class="card-heading">
+                                    <h5>BioGaia Probiotic Drops 5mL</h5><br>
+                                </div>
+                                <div class="price">$395.00</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carditems">
+                        <div class="card">
+                            <div class="cardimage5">
+                                <img src="./images/product-card/product5.jpg" alt="Denim Jeans">
+                                <div class="cardhover">
+                                    <img src="./images/zoombutton.png" alt="zoombutton">
+                                    <button type="button" class="cardbutton"
+                                        onclick="alert('Your Product has been Successfully Added to Cart')">Add to
+                                        Cart</button>
+                                </div>
+                            </div>
+                            <div class="cardDescription">
+                                <div class="card-heading">
+                                    <h5>BioGaia Probiotic Drops 5mL</h5><br>
+                                </div>
+                                <div class="price">$395.00</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carditems">
+                        <div class="card">
                             <div class="cardimage1">
                                 <img src="./images/product-card/product1.png" alt="Denim Jeans">
                                 <div class="cardhover">
@@ -459,44 +497,6 @@
                                 <div class="price">$19.99<span>
                                         <div class="price-line1"></div> $999.99
                                     </span></div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carditems">
-                        <div class="card">
-                            <div class="cardimage5">
-                                <img src="./images/product-card/product5.jpg" alt="Denim Jeans">
-                                <div class="cardhover">
-                                    <img src="./images/zoombutton.png" alt="zoombutton">
-                                    <button type="button" class="cardbutton"
-                                        onclick="alert('Your Product has been Successfully Added to Cart')">Add to
-                                        Cart</button>
-                                </div>
-                            </div>
-                            <div class="cardDescription">
-                                <div class="card-heading">
-                                    <h5>BioGaia Probiotic Drops 5mL</h5><br>
-                                </div>
-                                <div class="price">$395.00</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="carditems">
-                        <div class="card">
-                            <div class="cardimage5">
-                                <img src="./images/product-card/product5.jpg" alt="Denim Jeans">
-                                <div class="cardhover">
-                                    <img src="./images/zoombutton.png" alt="zoombutton">
-                                    <button type="button" class="cardbutton"
-                                        onclick="alert('Your Product has been Successfully Added to Cart')">Add to
-                                        Cart</button>
-                                </div>
-                            </div>
-                            <div class="cardDescription">
-                                <div class="card-heading">
-                                    <h5>BioGaia Probiotic Drops 5mL</h5><br>
-                                </div>
-                                <div class="price">$395.00</div>
                             </div>
                         </div>
                     </div>
@@ -1023,6 +1023,20 @@
             $('#menu ul').slideToggle()
         });
     });
+</script>
+<script>
+    window.onscroll = function () { myFunction() };
+
+    var header = document.getElementById("myHeader");
+    var sticky = header.offsetTop;
+
+    function myFunction() {
+        if (window.pageYOffset > sticky) {
+            header.classList.add("sticky");
+        } else {
+            header.classList.remove("sticky");
+        }
+    }
 </script>
 
 </html>
