--- a/index.html
+++ b/index.html
@@ -65,13 +65,7 @@
                         <div class="container">
                             <div id='menu'>
                                 <ul>
-                                    <li><a class='prett' href='#' title="My Account">My Account</a>
-                                        <ul class='menus'>
-                                            <li><a href='#' title="Drop Menu1">Favourites</a></li>
-                                            <li><a href='#' title="Drop Menu2">Wishlist</a></li>
-                                            <li><a href='/' title="Drop Menu3">Log-Out</a></li>
-                                        </ul>
-                                    </li>
+
                                     <li><a class='prett' href='#' title="Shop All">Shop All</a>
                                         <ul class='menus'>
                                             <li><a href='#' title="Drop Menu1">Pharmacy</a></li>
@@ -88,6 +82,13 @@
                                     <li><a href='#' title="Menu 1">Incontinence</a></li>
                                     <li><a href='#' title="Menu 1">Skin</a></li>
                                     <li><a href='#' title="Menu 1">Sport</a></li>
+                                    <li><a class='prett' href='#' title="My Account">My Account</a>
+                                        <ul class='menus'>
+                                            <li><a href='#' title="Drop Menu1">Favourites</a></li>
+                                            <li><a href='#' title="Drop Menu2">Wishlist</a></li>
+                                            <li><a href='/' title="Drop Menu3">Log-Out</a></li>
+                                        </ul>
+                                    </li>
                                 </ul>
                             </div>
                         </div>
@@ -860,22 +861,26 @@
     <div class="contact_detail_section">
         <div class="container">
             <div class="footer-section">
-                <div class="footer-contact_detail_section">
-                    <img src="./images/calllogo.png" alt="call-icon">
-                    <p>Speak to a Pharmacist<br><span><a href="tel:0733553052">07 3355 3052</a></span></p>
+                <div class="footer-section-top">
+                    <div class="footer-contact_detail_section">
+                        <img src="./images/calllogo.png" alt="call-icon">
+                        <p>Speak to a Pharmacist<br><span><a href="tel:0733553052">07 3355 3052</a></span></p>
+                    </div>
+                    <div class="footer-contact_detail_section">
+                        <img src="./images/openlogo.png" alt="">
+                        <p>Open 7 days<br><span>Mon - Sat 7am to 8pm </span></p>
+                    </div>
                 </div>
-                <div class="footer-contact_detail_section">
-                    <img src="./images/openlogo.png" alt="">
-                    <p>Open 7 days<br><span>Mon - Sat 7am to 8pm </span></p>
-                </div>
-                <div class="footer-contact_detail_section ">
-                    <img src="./images/locationlogo.png" alt="">
-                    <p>Our location<br><span>621 Stafford Road, STAFFORD, QLD 4053, Australia</span></p>
-                </div>
-                <div class="footerButton locationsection">
-                    <a href="https://www.google.com/maps/place/SuperPharmacyPlus/@-27.4075278,152.9994517,19.25z/data=!4m5!3m4!1s0x6b91579ba915741f:0x2ac447c03da4c3a6!8m2!3d-27.407456!4d152.999603"
-                        target="_blank">View
-                        on Maps</a>
+                <div class="footer-section-bottom">
+                    <div class="footer-contact_detail_section ">
+                        <img src="./images/locationlogo.png" alt="">
+                        <p>Our location<br><span>621 Stafford Road, STAFFORD, QLD 4053, Australia</span></p>
+                    </div>
+                    <div class="footerButton locationsection">
+                        <a href="https://www.google.com/maps/place/SuperPharmacyPlus/@-27.4075278,152.9994517,19.25z/data=!4m5!3m4!1s0x6b91579ba915741f:0x2ac447c03da4c3a6!8m2!3d-27.407456!4d152.999603"
+                            target="_blank">View
+                            on Maps</a>
+                    </div>
                 </div>
             </div>
         </div>
